test/apps/basics/src/routes/errors/invalid-route-response.js
export function get() {
  return 'this ought to be an object';
}
